# AK-2-lab2

./: CMakeLists.txt  Makefile  calculator.cpp  calculator.h  main.cpp  triangle.cpp  triangle.h
